Fix issue #694: QA Views displayed as single column in menu
Some rules too wide in scope in Credits and Release Notes.

--- a/web/style/changelog.css
+++ b/web/style/changelog.css
@@ -5,13 +5,14 @@
     width: 80%;
 }
 
-#changelog ul {
+#changelog #pagecontent ul {
     list-style: none;
+    margin: 0;
     padding-left: 15px;
+    width: 100%;
 }
 
-#changelog h3,
-#changelog ul {
+#changelog h3 {
     margin: 0;
     width: 100%;
 }
