--- a/web/style/transvision.css
+++ b/web/style/transvision.css
@@ -793,7 +793,7 @@ fieldset {
     width: 80%;
 }
 
-#credits ul {
+#credits #pagecontent ul {
     padding-left: 15px;
 }
 
